--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.divContainer{
+  display: flex;
+  flex-flow: row wrap;
+  width: 60%;
+  /* border: 1px solid black; */
+  float: left;
+  margin-top: 70px;
+  padding-bottom: 40px;
+}
